<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/delivery_address"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/poppinsMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_address"
            tools:text="Jl Puri Anjasmoro A11/56, Semarang" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_choose_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/choose_address"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:theme="@style/poppinsMedium"
            app:cornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_choose_address" />

        <TextView
            android:id="@+id/tv_title_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/checkout_items"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/poppinsMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_checkout_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title_items"
            tools:listitem="@layout/item_row_checkout" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_checkout_item" />

        <TextView
            android:id="@+id/tv_title_shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/shipping_method"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/poppinsMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <TextView
            android:id="@+id/tv_choose_shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:drawablePadding="4dp"
            android:text="@string/choose"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:theme="@style/poppinsMedium"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_shipping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_shipping" />

        <include
            android:id="@+id/content_shipping"
            layout="@layout/content_shipping_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_title_shipping" />

        <RelativeLayout
            android:id="@+id/layout_shipping"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/divider2"
            app:layout_constraintBottom_toBottomOf="@id/divider3"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/content_shipping" />

        <TextView
            android:id="@+id/tv_title_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/payment_details"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/poppinsMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <RelativeLayout
            android:id="@+id/payment_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/stroke_background"
            app:layout_constraintBottom_toBottomOf="@id/space_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_payment" />

        <TextView
            android:id="@+id/tv_title_products_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/products_sub_total"
            android:textColor="?attr/colorOnSecondary"
            android:theme="@style/poppinsMedium"
            app:layout_constraintStart_toStartOf="@id/payment_background"
            app:layout_constraintTop_toTopOf="@id/payment_background" />

        <TextView
            android:id="@+id/tv_title_shipping_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/shipping_cost"
            android:textColor="?attr/colorOnSecondary"
            android:theme="@style/poppinsMedium"
            app:layout_constraintStart_toStartOf="@id/payment_background"
            app:layout_constraintTop_toBottomOf="@id/tv_title_products_subtotal" />

        <TextView
            android:id="@+id/tv_title_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/total_price"
            android:textColor="?attr/colorOnSecondary"
            android:textStyle="bold"
            android:theme="@style/poppinsMedium"
            app:layout_constraintStart_toStartOf="@id/payment_background"
            app:layout_constraintTop_toBottomOf="@id/tv_title_shipping_cost" />

        <TextView
            android:id="@+id/tv_products_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="?attr/colorOnSecondary"
            android:theme="@style/poppinsMedium"
            app:layout_constraintEnd_toEndOf="@id/payment_background"
            app:layout_constraintTop_toTopOf="@id/tv_title_products_subtotal"
            tools:text="Rp 12.000" />

        <TextView
            android:id="@+id/tv_shipping_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="?attr/colorOnSecondary"
            android:theme="@style/poppinsMedium"
            app:layout_constraintEnd_toEndOf="@id/payment_background"
            app:layout_constraintTop_toTopOf="@id/tv_title_shipping_cost"
            tools:text="Rp 5.000" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="?attr/colorOnSecondary"
            android:textStyle="bold"
            android:theme="@style/poppinsMedium"
            app:layout_constraintEnd_toEndOf="@id/payment_background"
            app:layout_constraintTop_toTopOf="@id/tv_title_total_price"
            tools:text="Rp 5.000" />

        <Space
            android:id="@+id/space_payment"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/payment_background"
            app:layout_constraintStart_toStartOf="@id/payment_background"
            app:layout_constraintTop_toBottomOf="@id/tv_title_total_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>